# Projet-dileme-prisonnier

./: .gitignore  Makefile  README.md  pyproject.toml
agents/: calculator_ai.md  empathic_ai.md
configs/: default.yaml
dagster_project/: __init__.py  assets.py  definitions.py
dashboard/: __init__.py  app.py  data.py
dbt_prisoners/: .user.yml  dbt_project.yml  profiles.yml
dbt_prisoners/models/: schema.yml  sources.yml
dbt_prisoners/models/gold/: behavioral_drift.sql  forgiveness_index.sql  matchup_matrix.sql  run_comparison.sql  tournament_summary.sql
dbt_prisoners/models/silver/: silver_player_match_stats.sql  silver_player_rounds.sql  silver_rounds.sql
dbt_prisoners/tests/: assert_gold_metric_ranges.sql
docs/: architecture.md
docs/superpowers/plans/: 2026-06-12-prisoners-dilemma-etl-implementation.md
docs/superpowers/specs/: 2026-06-12-prisoners-dilemma-etl-design.md
src/prisoners_dilemma/: __init__.py  cli.py  config.py  domain.py  simulation.py  storage.py  strategies.py  vllm_client.py
tests/: __init__.py  test_config.py  test_dashboard_data.py  test_domain.py  test_simulation.py  test_storage.py  test_strategies.py  test_vllm_client.py
